# SimpleLoanManagement

./: CMakeLists.txt
LoanManagementSystem/: CMakeLists.txt
LoanManagementSystem/include/: Customer.h  Loan.h
LoanManagementSystem/src/: Customer.cpp  Loan.cpp  LoanManagementSystem.cpp
